src/components/Layouts/Header/Options/Options.module.css
.header__options {
	display: flex;
	justify-content: space-between;
	align-items: center;
	max-width: 1200px;
	color: #000000;
	margin: auto;
	padding: 15px 25px;
}

.header__logo {
	padding-right: 25px;
}

.header__burgerMenu {
	cursor: pointer;
	display: none;
	z-index: 2;
}

.header__closeBurgerMenu {
	cursor: pointer;
	display: none;
	z-index: 2;
}

.header__optionsNavbar {
	width: 350px;
}

.header__optionsList {
	display: flex;
	justify-content: space-between;
	padding: 0;

	li {
		cursor: pointer;
		padding: 8px 10px;

		&:hover {
			background-color: #f0f0f0;
			transition-duration: 0.6s;
		}
	}
}

.header__search {
	background-color: #f0f0f0;
	border-radius: 25px;
	padding: 10px 45px;
	border: none;
	width: 400px;
	height: 28px;
	background-image: url("/images/search.png");
	background-position: 15px center;
	background-repeat: no-repeat;
	background-size: 20px;
	outline: none;
}

.header__searchMobile {
	display: none;
}

.header__customerOptions {
	width: 60px;
	display: flex;
	justify-content: space-between;

	div {
		cursor: pointer;
	}
}

@media (max-width: 700px) {
	.header__burgerMenu {
		display: block;
		margin-right: 30px;
	}

	.header__logo {
		margin-left: -15px;

		img {
			width: 120px;
			height: 18px;
		}
	}

	.header__options {
		padding: 25px;
	}

	.header__customerOptions {
		width: 100px;
	}

	.header__optionsNavbar {
		display: none;
	}

	.header__search {
		display: none;
	}

	.header__searchMobile {
		display: block;
	}
}

